// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeSelect.basic render renders TreeNode correctly 1`] = `
<div
  class="rc-tree-select rc-tree-select-single rc-tree-select-show-arrow rc-tree-select-open"
>
  <div
    class="rc-tree-select-selector"
  >
    <span
      class="rc-tree-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="rc-tree-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="rc-tree-select-selection-placeholder"
    />
  </div>
  <div>
    <div
      class="rc-tree-select-dropdown"
      style="opacity: 0; pointer-events: none; min-width: 0; width: 0px;"
    >
      <div>
        <div>
          <div
            class="rc-tree-select-tree"
          >
            <div
              role="tree"
            >
              <input
                disabled=""
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="rc-tree-select-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
            >
              <div
                class="rc-tree-select-tree-indent"
              >
                <div
                  class="rc-tree-select-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="rc-tree-select-tree-list"
              style="height: 200px;"
            >
              <div>
                <div
                  class="rc-tree-select-tree-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    />
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="0 label"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0 label
                      </span>
                    </span>
                  </div>
                  <div
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-leaf-last"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    />
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                      title="1 label"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        1 label
                      </span>
                    </span>
                  </div>
                  <div
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    >
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="10 label"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        10 label
                      </span>
                    </span>
                  </div>
                  <div
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-leaf-last"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    >
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="11 label"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        11 label
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="rc-tree-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      class="rc-tree-select-arrow-icon"
    />
  </span>
</div>
`;

exports[`TreeSelect.basic render renders TreeNode correctly with falsy child 1`] = `
<div
  class="rc-tree-select rc-tree-select-single rc-tree-select-show-arrow rc-tree-select-open"
>
  <div
    class="rc-tree-select-selector"
  >
    <span
      class="rc-tree-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="rc-tree-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="rc-tree-select-selection-placeholder"
    />
  </div>
  <div>
    <div
      class="rc-tree-select-dropdown"
      style="opacity: 0; pointer-events: none; min-width: 0; width: 0px;"
    >
      <div>
        <div>
          <div
            class="rc-tree-select-tree"
          >
            <div
              role="tree"
            >
              <input
                disabled=""
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="rc-tree-select-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
            >
              <div
                class="rc-tree-select-tree-indent"
              >
                <div
                  class="rc-tree-select-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="rc-tree-select-tree-list"
              style="height: 200px;"
            >
              <div>
                <div
                  class="rc-tree-select-tree-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    />
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="0 label"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        0 label
                      </span>
                    </span>
                  </div>
                  <div
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-leaf-last"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    />
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                      title="1 label"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        1 label
                      </span>
                    </span>
                  </div>
                  <div
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    >
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="10 label"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        10 label
                      </span>
                    </span>
                  </div>
                  <div
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-leaf-last"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    >
                      <span
                        class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-end"
                      />
                    </span>
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="11 label"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        11 label
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="rc-tree-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      class="rc-tree-select-arrow-icon"
    />
  </span>
</div>
`;

exports[`TreeSelect.basic render renders correctly 1`] = `
<div
  class="awesome forTest awesome-multiple awesome-show-search"
  style="width: 300px;"
>
  <div
    class="awesome-selector"
  >
    <span
      class="awesome-selection-search"
      style="width: 0px;"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="awesome-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
      <span
        aria-hidden="true"
        class="awesome-selection-search-mirror"
      >
         
      </span>
    </span>
    <span
      class="awesome-selection-placeholder"
    />
  </div>
</div>
`;

exports[`TreeSelect.basic render renders disabled correctly 1`] = `
<div
  class="rc-tree-select rc-tree-select-single rc-tree-select-show-arrow rc-tree-select-disabled"
>
  <div
    class="rc-tree-select-selector"
  >
    <span
      class="rc-tree-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="rc-tree-select-selection-search-input"
        disabled=""
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="rc-tree-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden="true"
    class="rc-tree-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      class="rc-tree-select-arrow-icon"
    />
  </span>
</div>
`;

exports[`TreeSelect.basic render renders tree correctly 1`] = `
<div
  class="rc-tree-select rc-tree-select-multiple rc-tree-select-show-search"
>
  <div
    class="rc-tree-select-selector"
  >
    <span
      class="rc-tree-select-selection-search"
      style="width: 0px;"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="rc-tree-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
      <span
        aria-hidden="true"
        class="rc-tree-select-selection-search-mirror"
      >
         
      </span>
    </span>
    <span
      class="rc-tree-select-selection-placeholder"
    />
  </div>
</div>
`;

exports[`TreeSelect.basic render renders treeDataSimpleMode correctly 1`] = `
<div>
  <div
    class="rc-tree-select rc-tree-select-single rc-tree-select-show-arrow rc-tree-select-open"
  >
    <div
      class="rc-tree-select-selector"
    >
      <span
        class="rc-tree-select-selection-search"
      >
        <input
          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="rc-tree-select-selection-search-input"
          id="rc_select_TEST_OR_SSR"
          readonly=""
          role="combobox"
          style="opacity: 0;"
          type="search"
          unselectable="on"
          value=""
        />
      </span>
      <span
        class="rc-tree-select-selection-placeholder"
      />
    </div>
    <div>
      <div
        class="rc-tree-select-dropdown"
        style="opacity: 0; pointer-events: none; min-width: 0; width: 0px;"
      >
        <div>
          <div>
            <div
              class="rc-tree-select-tree"
            >
              <div
                role="tree"
              >
                <input
                  disabled=""
                  style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                  value=""
                />
              </div>
              <div
                aria-hidden="true"
                class="rc-tree-select-tree-treenode"
                style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
              >
                <div
                  class="rc-tree-select-tree-indent"
                >
                  <div
                    class="rc-tree-select-tree-indent-unit"
                  />
                </div>
              </div>
              <div
                class="rc-tree-select-tree-list"
                style="height: 200px;"
              >
                <div>
                  <div
                    class="rc-tree-select-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-leaf-last"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      />
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher_open"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-open"
                        title="label0"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__open"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          label0
                        </span>
                      </span>
                    </div>
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-leaf-last"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      >
                        <span
                          class="rc-tree-select-tree-indent-unit rc-tree-select-tree-indent-unit-start rc-tree-select-tree-indent-unit-end"
                        />
                      </span>
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                        title="label1"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          label1
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="rc-tree-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <span
        class="rc-tree-select-arrow-icon"
      />
    </span>
  </div>
</div>
`;

exports[`TreeSelect.basic search nodes check tree changed by filter 1`] = `
<div>
  <div
    class="rc-tree-select rc-tree-select-single rc-tree-select-show-arrow rc-tree-select-open rc-tree-select-show-search"
  >
    <div
      class="rc-tree-select-selector"
    >
      <span
        class="rc-tree-select-selection-search"
      >
        <input
          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="rc-tree-select-selection-search-input"
          id="rc_select_TEST_OR_SSR"
          role="combobox"
          type="search"
          value="a"
        />
      </span>
    </div>
    <div>
      <div
        class="rc-tree-select-dropdown"
        style="opacity: 0; pointer-events: none; min-width: 0; width: 0px;"
      >
        <div>
          <div>
            <div
              class="rc-tree-select-tree"
            >
              <div
                role="tree"
              >
                <input
                  disabled=""
                  style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                  value=""
                />
              </div>
              <div
                aria-hidden="true"
                class="rc-tree-select-tree-treenode"
                style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
              >
                <div
                  class="rc-tree-select-tree-indent"
                >
                  <div
                    class="rc-tree-select-tree-indent-unit"
                  />
                </div>
              </div>
              <div
                class="rc-tree-select-tree-list"
                style="height: 200px;"
              >
                <div>
                  <div
                    class="rc-tree-select-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-leaf-last filter-node"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      />
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                        title="labela"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          labela
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="rc-tree-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <span
        class="rc-tree-select-arrow-icon"
      />
    </span>
  </div>
</div>
`;

exports[`TreeSelect.basic search nodes check tree changed by filter 2`] = `
<div>
  <div
    class="rc-tree-select rc-tree-select-single rc-tree-select-show-arrow rc-tree-select-open rc-tree-select-show-search"
  >
    <div
      class="rc-tree-select-selector"
    >
      <span
        class="rc-tree-select-selection-search"
      >
        <input
          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="rc-tree-select-selection-search-input"
          id="rc_select_TEST_OR_SSR"
          role="combobox"
          type="search"
          value=""
        />
      </span>
      <span
        class="rc-tree-select-selection-placeholder"
      />
    </div>
    <div>
      <div
        class="rc-tree-select-dropdown"
        style="opacity: 0; pointer-events: none; min-width: 0; width: 0px;"
      >
        <div>
          <div>
            <div
              class="rc-tree-select-tree"
            >
              <div
                role="tree"
              >
                <input
                  disabled=""
                  style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                  value=""
                />
              </div>
              <div
                aria-hidden="true"
                class="rc-tree-select-tree-treenode"
                style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
              >
                <div
                  class="rc-tree-select-tree-indent"
                >
                  <div
                    class="rc-tree-select-tree-indent-unit"
                  />
                </div>
              </div>
              <div
                class="rc-tree-select-tree-list"
                style="height: 200px;"
              >
                <div>
                  <div
                    class="rc-tree-select-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      />
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                        title="labela"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          labela
                        </span>
                      </span>
                    </div>
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-close rc-tree-select-tree-treenode-leaf-last"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      />
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                        title="labelb"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          labelb
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="rc-tree-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <span
        class="rc-tree-select-arrow-icon"
      />
    </span>
  </div>
</div>
`;

exports[`TreeSelect.basic search nodes filter node but not remove then 1`] = `
<div>
  <div
    class="rc-tree-select rc-tree-select-single rc-tree-select-show-arrow rc-tree-select-open rc-tree-select-show-search"
  >
    <div
      class="rc-tree-select-selector"
    >
      <span
        class="rc-tree-select-selection-search"
      >
        <input
          aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
          aria-autocomplete="list"
          aria-controls="rc_select_TEST_OR_SSR_list"
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-owns="rc_select_TEST_OR_SSR_list"
          autocomplete="off"
          class="rc-tree-select-selection-search-input"
          id="rc_select_TEST_OR_SSR"
          role="combobox"
          type="search"
          value="a"
        />
      </span>
    </div>
    <div>
      <div
        class="rc-tree-select-dropdown"
        style="opacity: 0; pointer-events: none; min-width: 0; width: 0px;"
      >
        <div>
          <div>
            <div
              class="rc-tree-select-tree"
            >
              <div
                role="tree"
              >
                <input
                  disabled=""
                  style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                  value=""
                />
              </div>
              <div
                aria-hidden="true"
                class="rc-tree-select-tree-treenode"
                style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
              >
                <div
                  class="rc-tree-select-tree-indent"
                >
                  <div
                    class="rc-tree-select-tree-indent-unit"
                  />
                </div>
              </div>
              <div
                class="rc-tree-select-tree-list"
                style="height: 200px;"
              >
                <div>
                  <div
                    class="rc-tree-select-tree-list-holder-inner"
                    style="display: flex; flex-direction: column;"
                  >
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open filter-node"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      />
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                        title="labela"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          labela
                        </span>
                      </span>
                    </div>
                    <div
                      class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-open rc-tree-select-tree-treenode-leaf-last"
                    >
                      <span
                        aria-hidden="true"
                        class="rc-tree-select-tree-indent"
                      />
                      <span
                        class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                      />
                      <span
                        class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                        title="labelb"
                      >
                        <span
                          class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                        />
                        <span
                          class="rc-tree-select-tree-title"
                        >
                          labelb
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="rc-tree-select-arrow"
      style="user-select: none;"
      unselectable="on"
    >
      <span
        class="rc-tree-select-arrow-icon"
      />
    </span>
  </div>
</div>
`;

exports[`TreeSelect.basic search nodes renders search input 1`] = `
<div
  class="rc-tree-select rc-tree-select-single rc-tree-select-show-arrow rc-tree-select-open rc-tree-select-show-search"
>
  <div
    class="rc-tree-select-selector"
  >
    <span
      class="rc-tree-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="rc-tree-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        role="combobox"
        type="search"
        value=""
      />
    </span>
    <span
      class="rc-tree-select-selection-placeholder"
    />
  </div>
  <div>
    <div
      class="rc-tree-select-dropdown"
      style="opacity: 0; pointer-events: none; min-width: 0; width: 0px;"
    >
      <div>
        <div>
          <div
            class="rc-tree-select-tree"
          >
            <div
              role="tree"
            >
              <input
                disabled=""
                style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
                value=""
              />
            </div>
            <div
              aria-hidden="true"
              class="rc-tree-select-tree-treenode"
              style="position: absolute; pointer-events: none; visibility: hidden; height: 0px; overflow: hidden;"
            >
              <div
                class="rc-tree-select-tree-indent"
              >
                <div
                  class="rc-tree-select-tree-indent-unit"
                />
              </div>
            </div>
            <div
              class="rc-tree-select-tree-list"
              style="height: 200px;"
            >
              <div>
                <div
                  class="rc-tree-select-tree-list-holder-inner"
                  style="display: flex; flex-direction: column;"
                >
                  <div
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-close"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    />
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="labela"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        labela
                      </span>
                    </span>
                  </div>
                  <div
                    class="rc-tree-select-tree-treenode rc-tree-select-tree-treenode-switcher-close rc-tree-select-tree-treenode-leaf-last"
                  >
                    <span
                      aria-hidden="true"
                      class="rc-tree-select-tree-indent"
                    />
                    <span
                      class="rc-tree-select-tree-switcher rc-tree-select-tree-switcher-noop"
                    />
                    <span
                      class="rc-tree-select-tree-node-content-wrapper rc-tree-select-tree-node-content-wrapper-normal"
                      title="labelb"
                    >
                      <span
                        class="rc-tree-select-tree-iconEle rc-tree-select-tree-icon__docu"
                      />
                      <span
                        class="rc-tree-select-tree-title"
                      >
                        labelb
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="rc-tree-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      class="rc-tree-select-arrow-icon"
    />
  </span>
</div>
`;
